name:             pandoc-unlit
version:          0.1.0
synopsis:         Literate Haskell support for Pandoc's Markdown flavor
category:         Development
license:          MIT
license-file:     LICENSE
author:           Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

source-repository head
  type: git
  location: https://github.com/sol/pandoc-unlit

executable pandoc-unlit
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base
    , pandoc
  main-is:
      Main.hs
