name:             pandoc-unlit
version:          0.1.0
synopsis:         Literate Haskell support for Pandoc's Markdown flavor
category:         Development
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

source-repository head
  type: git
  location: https://github.com/sol/pandoc-unlit

executable pandoc-unlit
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base    < 5
    , pandoc
  main-is:
      Main.hs
